# whitebox-hallucinations-llms

./: .commitlintrc.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RESULTS_README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: decoding.yaml
datasets/loaders/: base_loader.py
experiments/: README.md
experiments/baseline_sample_decoding_2026-02-12_17-07-15/: predictions.jsonl
experiments/baseline_sample_decoding_2026-02-18_17-52-18/: predictions.jsonl
experiments/baseline_sample_decoding_2026-02-18_18-11-39/: predictions.jsonl
experiments/baseline_sample_decoding_2026-02-18_18-13-25/: predictions.jsonl
experiments/baseline_sample_decoding_2026-02-19_18-32-22/: predictions.jsonl
experiments/baseline_sample_decoding_2026-02-19_18-32-37/: predictions.jsonl
src/evaluation/: metrics.py
src/generation/: decoding.py
src/pipeline/: run_generation.py
src/whitebox_hallucinations/evaluation/: scorer.py
src/whitebox_hallucinations/pipeline/: run_generation.py
src/whitebox_hallucinations/utils/: io.py
src/whitebox_hallucinations/wbh_datasets/loaders/: base_loader.py
src/whitebox_hallucinations/wbh_datasets/processed/: sample_qa.jsonl
templates/: run-manifest.template.json
tests/: test_smoke.py
